DuPont DevSB/src/objects/FF_PSA_DSS_Materials__c.object
<CustomObject>
    <description>Master – to store all DSS Materials like ILT Material,Seminars etc with cost against each item.</description>
    <fields>
        <fullName>FF_PSA_Floor_Price__c</fullName>
        <description>These are the standard price offerings against each product and are prepopulated. These values cannot be changed by the BDM. The Master data for Floor, Market and Stretch Price for each of the product will be stored in the system and can be updated by the Admin.</description>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_High_Est__c</fullName>
        <description>High estimate for the training. This is a master data which the BDM cannot change</description>
        <label>High Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_ILT_Admin_Fee__c</fullName>
        <description>Number of admin kits for the Course</description>
        <label>ILT-Admin Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_ILT_Audit_Checklist_Fee__c</fullName>
        <description>Number of Observation Checklist for the Course</description>
        <label>ILT-Audit Checklist Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_ILT_DVD_Fee__c</fullName>
        <description>Unit cost for the Course</description>
        <label>ILT-DVD Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_ILT_Decals_Fee__c</fullName>
        <description>Number of Decals for the Course</description>
        <label>ILT-Decals Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_ILT_Leader_Fee__c</fullName>
        <description>Number of leader kits for the Course</description>
        <label>ILT-Leader Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_ILT_License_Fee__c</fullName>
        <description>License Cost for the Course</description>
        <label>ILT-License Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_ILT_Observation_Fee__c</fullName>
        <description>Number of Observation cards for the Course</description>
        <label>ILT-Observation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_ILT_Participant_Fee__c</fullName>
        <description>Number of Participant Workbooks for the Course</description>
        <label>ILT-Participant Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Low_Est__c</fullName>
        <description>Low estimate for the training. This is a master data which the BDM cannot change</description>
        <label>Low Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Market_Price__c</fullName>
        <description>These are the standard price offerings against each product and are prepopulated. These values cannot be changed by the BDM. The Master data for Floor, Market and Stretch Price for each of the product will be stored in the system and can be updated by the Admin.</description>
        <label>Market Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Material_Category__c</fullName>
        <description>Indicates the type of product</description>
        <label>Material Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Training</fullName>
                </value>
                <value>
                    <fullName>ILT material</fullName>
                </value>
                <value>
                    <fullName>Seminars/Workshops</fullName>
                </value>
                <value>
                    <fullName>SPS VAB Survey</fullName>
                </value>
                <value>
                    <fullName>Streaming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Material_Name__c</fullName>
        <description>Name of the material</description>
        <label>Material Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Material_Sub_Category__c</fullName>
        <description>Dependent pick list on Material category</description>
        <label>Material Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project Pricing</fullName>
                </value>
                <value>
                    <fullName>Translation Pricing</fullName>
                </value>
                <value>
                    <fullName>Streaming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_No_of_Access__c</fullName>
        <description>Number of accesses for which the rate is provided. It is assumed that this field value will be 1</description>
        <label>Class Size for Seminar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Per_Access_Fees__c</fullName>
        <description>Per access fee for each tailor content</description>
        <label>License Fees per Trainer</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Per_User_Fee__c</fullName>
        <description>Per user fee for each tailor content 
Per user fee for each tailor support Service
Per user fee for each tailor Course Service
Per user fee for each tailor SMB Service
Per user fee for each tailor pass pricing option Pricing standard
Per user fee for each open pricing option Pricing standard
Per user fee for each monthly license pricing option Pricing standard</description>
        <label>Additional cost for extra participant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Region__c</fullName>
        <description>Training Region for translation cost and price estimates.</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>LA (Spanish)</fullName>
                </value>
                <value>
                    <fullName>LA (Portuguese)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Seminar_Cost__c</fullName>
        <description>Seminar cost for each of the seminars for standard number of participants and 1 course in the period</description>
        <label>Seminar Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Seminar_Price__c</fullName>
        <label>Seminar Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Special_Instructions__c</fullName>
        <description>to store special instructions</description>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Stream_ACC_High__c</fullName>
        <label>Streaming Access Range High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Stream_ACC_Low__c</fullName>
        <label>Streaming Access Range Low</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Stream_Fees__c</fullName>
        <label>Streaming Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Stream_No_of_Access__c</fullName>
        <label>No of Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-TO-50</fullName>
                </value>
                <value>
                    <fullName>51-to-500</fullName>
                </value>
                <value>
                    <fullName>501-to-1000</fullName>
                </value>
                <value>
                    <fullName>1001-to-5000</fullName>
                </value>
                <value>
                    <fullName>5001-to-10000</fullName>
                </value>
                <value>
                    <fullName>10001-to-25000</fullName>
                </value>
                <value>
                    <fullName>&gt;25000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Stream_No_of_Titles__c</fullName>
        <label>No of Titles</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2-TO-5</fullName>
                </value>
                <value>
                    <fullName>6-TO-10</fullName>
                </value>
                <value>
                    <fullName>11-TO-19</fullName>
                </value>
                <value>
                    <fullName>&gt;=20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Stream_Pricing_Standard__c</fullName>
        <label>Pricing Standard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Stream_TTL_High__c</fullName>
        <label>Streaming Title Range High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Stream_TTL_Low__c</fullName>
        <label>Streaming Title Range Low</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Stream_Title_Level__c</fullName>
        <label>Title Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FF_PSA_Stream_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Full Length Videos</fullName>
                </value>
                <value>
                    <fullName>Short Videos</fullName>
                </value>
                <value>
                    <fullName>Video Bytes</fullName>
                </value>
                <value>
                    <fullName>Flix Format-Full</fullName>
                </value>
                <value>
                    <fullName>Flix Format-Short</fullName>
                </value>
                <value>
                    <fullName>Flix Format-Bytes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Stream_Type__c</fullName>
        <inlineHelpText>Types of streaming, Select Pass Annual,Open Pricing Annual Only,Select Pass Monthly</inlineHelpText>
        <label>Streaming Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select Pass Annual</fullName>
                </value>
                <value>
                    <fullName>Open Pricing Annual Only</fullName>
                </value>
                <value>
                    <fullName>Select Pass Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Stretch_Price__c</fullName>
        <description>These are the standard price offerings against each product and are prepopulated. These values cannot be changed by the BDM. The Master data for Floor, Market and Stretch Price for each of the product will be stored in the system and can be updated by the Admin.</description>
        <label>Stretch Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_project_type__c</fullName>
        <description>Type of the training/Seminar to be provided</description>
        <label>Course Seminar Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Participant Guide (40 page with 10 item test)</fullName>
                </value>
                <value>
                    <fullName>eLearning Translation Costs (No SME Required)</fullName>
                </value>
                <value>
                    <fullName>Establishing a Central Safety Committee (CSC) workshop/working session</fullName>
                </value>
                <value>
                    <fullName>SafeStart IAW (4 Days)</fullName>
                </value>
                <value>
                    <fullName>DataPro; Enterprise License</fullName>
                </value>
                <value>
                    <fullName>DataPro; Pilot Single Site License</fullName>
                </value>
                <value>
                    <fullName>DataPro; Single Site License</fullName>
                </value>
                <value>
                    <fullName>SafeStart™ ELF + EAU Combo</fullName>
                </value>
                <value>
                    <fullName>SafeStart™ Employee License Fee Units 1-5</fullName>
                </value>
                <value>
                    <fullName>SafeStart™ Extended Applicatiop Units 1-5</fullName>
                </value>
                <value>
                    <fullName>STOP™ for Each Other</fullName>
                </value>
                <value>
                    <fullName>STOP™ for Ergonomics</fullName>
                </value>
                <value>
                    <fullName>STOP™ for Supervision</fullName>
                </value>
                <value>
                    <fullName>Take Two Video Combo Set (Incl #13-49; #51-68): DVD</fullName>
                </value>
                <value>
                    <fullName>Take Two Video Combo Set (Incl #13-49; #51-68); Enterprise License Copy</fullName>
                </value>
                <value>
                    <fullName>Take Two Video Combo Set (Incl #13-49; #51-68); Site License Copy</fullName>
                </value>
                <value>
                    <fullName>Take Two Video Set (Incl #51-68); DVD</fullName>
                </value>
                <value>
                    <fullName>Take Two Video Set (Incl #51-68); Enterprise License Copy</fullName>
                </value>
                <value>
                    <fullName>Take Two Video Set (Incl #51-68); Site License Copy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DSS Materials</label>
    <nameField>
        <displayFormat>DSSMAST-{0000}</displayFormat>
        <label>DSS Materials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DSS Materials</pluralLabel>
    <recordTypes>
        <fullName>FF_PSA_DSS_Materials</fullName>
        <active>true</active>
        <label>FF PSA DSS Materials</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>